GPF-1454 agp - fix keybinds dropdown z-index issue

--- a/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
+++ b/gpfjs/src/app/autism-gene-profiles-table/autism-gene-profiles-table.component.css
@@ -215,6 +215,7 @@
   padding: 8px 0 6px 0;
   background: #fff;
   align-items: baseline;
+  z-index: 1;
 }
 
 .above-table-bar-item {
